k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dws
  labels:
    name: dws
    app: document-scanner
